Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="index.css">
 
 <head>
     <title>🌸🌸 fourflowers.gay 🌸🌸</title>
