--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="index.css">
 
 <head>
-    <title>🌸🌸 fourflowers.gay 🌸🌸</title>
-    <link rel="icon" href="migu.png">
+    <title>🌸🌸 mimosa.gay 🌸🌸</title>
+    <link rel="icon" href="mimosa.webp">
 </head>
 
 <div name="header">
