--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>🌸🌸 mimosa.gay 🌸🌸</title>
-    <link rel="icon" href="mimosa.webp">
+    <link rel="icon" href="mimosa.png">
 </head>
 
 <div name="header">
