--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 
 <div name="header">
     <header>
-        mimosa.gay
+        <img src="mimosa.png" class="mimosaspin">
+        <img src="mimosa.png" class="mimosaspin">
+        <span class="lettershake" style="animation-delay: 0;" >m</span>
+        <span class="lettershake" style="animation-delay: 0.1s;">i</span>
+        <span class="lettershake" style="animation-delay: 0.2s;">m</span>
+        <span class="lettershake" style="animation-delay: 0.3s;">o</span>
+        <span class="lettershake" style="animation-delay: 0.4s;">s</span>
+        <span class="lettershake" style="animation-delay: 0.5s;">a</span>
+        <span class="lettershake" style="animation-delay: 0.6s;">.</span>
+        <span class="lettershake" style="animation-delay: 0.7s;">g</span>
+        <span class="lettershake" style="animation-delay: 0.8s;">a</span>
+        <span class="lettershake" style="animation-delay: 0.9s;">y</span>
+        <img src="mimosa.png" class="mimosaspin">
+        <img src="mimosa.png" class="mimosaspin">
     </header>
 </div>
 
@@ -29,7 +42,7 @@
         </div>
 
         <div>
-
+            
         </div>
 
         <br>
