--- a/divineart.html
+++ b/divineart.html
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                 </li>
-            <li name="navbar_item"><a href="main.html">Back to mimosa.gay</a></li>
+            <li name="navbar_item"><a href="index.html">Back to mimosa.gay</a></li>
         </ul>
     </div>
 
