--- a/acetowriting1.html
+++ b/acetowriting1.html
@@ -1,8 +1,19 @@
 <html lang="en">
 <link rel="stylesheet" href="aceto.css">
 
-<div class="fullheight">
-    
-</div>
+<body>
+    <h1 style="margin-bottom: -20pt;">
+        Unnamed
+    </h1>
+    <h2 style="margin-bottom: -8pt;">
+        JoJo's Bizarre Adventure
+    </h2>
+    <h3 style="text-decoration: underline;">
+        Written by Aceto Doppio
+    </h3>
+    <h3>
+        In no way is this canon or endorsed by Hirohiki Araki. This is a story based off of developing a memory I had.
+    </h3>
+</body>
 
 </html>
