--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
             <ul name="navbar">
                 <li name="navbar_item">
                     <div class="dropdown">
-                        <a class="dropbtn">THINGS</a>
+                        <a class="dropbtn">WRITING</a>
                         <div class="dropdown-content">
-                            <a>written</a>
+                            <a href="divineart.html">The Divine Art of Transformation</a>
+                            <br>
+                            <a href="acetowriting1.html">Unnamed JoJo's Bizarre Adventure Story</a>
+                            <br>
+                            <a>Drone Memories</a>
                         </div>
                     </div>
                 </li>
