more aceto update

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="dropdown-content">
                             <a href="divineart.html">The Divine Art of Transformation</a>
                             <br>
-                            <a href="acetowriting1.html">Unnamed JoJo's Bizarre Adventure Story</a>
+                            <a href="italktothewind.html">I Talk To The Wind</a>
                             <br>
                             <a>Drone Memories</a>
                         </div>
