on big computer

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <html lang="en">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="index.css">
 
 <head>
-    <title>🌸🌸 fourflowers.gay 🌸🌸</title>
-    <link rel="icon" href="migu.png">
+    <title>🌸🌸 mimosa.gay 🌸🌸</title>
+    <link rel="icon" href="mimosa.png">
 </head>
 
 <div name="header">
     <header>
-        mimosa.gay
+        <img src="mimosa.png" class="mimosaspin">
+        <img src="mimosa.png" class="mimosaspin">
+        <span class="lettershake" style="animation-delay: 0;" >m</span>
+        <span class="lettershake" style="animation-delay: 0.1s;">i</span>
+        <span class="lettershake" style="animation-delay: 0.2s;">m</span>
+        <span class="lettershake" style="animation-delay: 0.3s;">o</span>
+        <span class="lettershake" style="animation-delay: 0.4s;">s</span>
+        <span class="lettershake" style="animation-delay: 0.5s;">a</span>
+        <span class="lettershake" style="animation-delay: 0.6s;">.</span>
+        <span class="lettershake" style="animation-delay: 0.7s;">g</span>
+        <span class="lettershake" style="animation-delay: 0.8s;">a</span>
+        <span class="lettershake" style="animation-delay: 0.9s;">y</span>
+        <img src="mimosa.png" class="mimosaspin">
+        <img src="mimosa.png" class="mimosaspin">
     </header>
 </div>
 
@@ -18,9 +31,13 @@
             <ul name="navbar">
                 <li name="navbar_item">
                     <div class="dropdown">
-                        <a class="dropbtn">THINGS</a>
+                        <a class="dropbtn">WRITING</a>
                         <div class="dropdown-content">
-                            <a>written</a>
+                            <a href="divineart.html">The Divine Art of Transformation</a>
+                            <br>
+                            <a href="italktothewind.html">I Talk To The Wind</a>
+                            <br>
+                            <a href="dronememories.html">Drone Memories</a>
                         </div>
                     </div>
                 </li>
@@ -29,7 +46,7 @@
         </div>
 
         <div>
-
+            
         </div>
 
         <br>
