um  idk somethinhg

--- a/dronememories.html
+++ b/dronememories.html
@@ -268,7 +268,7 @@
 
                 <span name="Tessa">“Yes, mother,”</span> Tessa responds, wiping her tears.
 
-                <span name="mother">“Send the boy one outside. And there’s still one in my library. Girl. Short hair. Broken glasses. Take her back with you afterwards. Understand?”</span>
+                <span name="mother">“Send <span class="tooltip">the boy one<span class="tooltiptext">:(</span></span> outside. And there’s still one in my library. Girl. Short hair. Broken glasses. Take her back with you afterwards. Understand?”</span>
 
                 Tessa looks at me, terrified.
 
@@ -314,7 +314,7 @@
 
                 <span name="N">“I uhh… I dunno…? I can’t remember much…”</span>
 
-                <span name="Tessa">“Ooooo-kay, we need to do something about that right now. I can’t have you going back out there like this,”</span> she demands.
+                <br><span name="Tessa">“Ooooo-kay, we need to do something about that right now. I can’t have you going back out there like this,”</span> she demands.
 
                 <span name="N">“Back… out there? Is something going on? Oh, wasn’t it the gala tonight?”</span>
 
@@ -348,9 +348,9 @@
 
                 <br><span name="Tessa">“That’s it? Nothing after that?”</span>
 
-                <span name="N">“Yeah, that’s… that’s what I said. I must have dozed off really good.”</span>
+                <br><span name="N">“Yeah, that’s… that’s what I said. I must have dozed off really good.”</span>
 
-                <span name="Tessa">“I’ll say,” she quips.</span>
+                <br><span name="Tessa">“I’ll say,” she quips.</span>
 
                 There’s noise from outside again.
 
