missed some formatting

--- a/dronememories.html
+++ b/dronememories.html
@@ -160,7 +160,7 @@
 
                 Oh.
 
-                <span name="mother">“Don’t test me, Tessa,”</span> she says with finality, turning her back on us, and spying her husband in the distance. “I swear, this daughter of mine…” she whispers as she walks briskly away.
+                <span name="mother">“Don’t test me, Tessa,”</span> she says with finality, turning her back on us, and spying her husband in the distance. <span name="mother">“I swear, this daughter of mine…”</span> she whispers as she walks briskly away.
 
                 I look to Tessa. She’s about to start crying. I feel cold.
 
