missed some formatting again

--- a/dronememories.html
+++ b/dronememories.html
@@ -206,9 +206,9 @@
 
                 I nod.
 
-                <span name="mother">“Yes, Mrs. Elliott,” she instructs.</span>
+                <span name="mother">“<i>Yes, Mrs. Elliott</i>,”</span> she instructs.
 
-                <br><span name="N">“Yes, Mrs. Elliott.”</span>
+                <span name="N">“Yes, Mrs. Elliott.”</span>
 
                 I turn and grab Cyn by the shoulders. She’s clutching her head again. We need to leave. I don’t just mean the ballroom.
 
