--- a/dronememories.html
+++ b/dronememories.html
@@ -8,9 +8,11 @@
                     <div class="dropdown">
                         <a class="dropbtn">chapters</a>
                         <div class="dropdown-content">
-                            <a href="dronememories.html#N1">N - A Flashback I Had The Other Day</a>
+                            <a href="dronememories.html#N1">[N] A Flashback I Had The Other Day</a>
                             <br>
-                            <a href="dronememories.html#Cyn1">cyn - diary entry 01</a>
+                            <a href="dronememories.html#Cyn1">[cyn] diary entry 01</a>
+                            <br>
+                            <a href="dronememories.html#V1">[V] Storm</a>
                         </div>
                     </div>
                 </li>
@@ -27,7 +29,7 @@
         </h1>
 
         <div name="chapter">
-            <h4 id="N1">N - A Flashback I Had The Other Day</h4>
+            <h4 id="N1">[N] A Flashback I Had The Other Day</h4>
             <div name="text">
                 <span style="color: lightgray; text-indent: 10%;">
                 3069 – Elliott Manor, Sydney, NSW, Australia, Earth
@@ -460,7 +462,7 @@
         </div>
 
         <div name="chapter">
-            <h4 id="Cyn1" style="font-family: 'Cascadia'; font-variant: normal;">cyn - memory bank recall : diary entry 01 "copper 9"</h4>
+            <h4 id="Cyn1" style="font-family: 'Cascadia'; font-variant: normal;">[cyn] memory bank recall : diary entry 01 "copper 9"</h4>
             <div name="text">
                 <span style="color: lightgray; text-indent: 10%;">
 
@@ -896,6 +898,123 @@
 
                     <br>
                     <hr>
+
+                </details>
+            </div>
+        </div>
+
+        <div name="chapter">
+            <h4 id="V1">[V] Storm</h4>
+            <div name="text">
+                <span style="color: lightgray; text-indent: 10%;">
+                3066 – Elliott Manor, Sydney, NSW, Australia, Earth
+                </span>
+                <br>
+                <details>
+                    <summary>CONTENT WARNING -- Emotional/Psychological Abuse</summary>
+                    After N arrived, it didn’t take long for J to latch onto him in the worst way. With me, she was at least a little welcoming. Cold, sure, but not overly concerned. She still got most of Tessa’s attention. I didn’t mind not having as much. They clearly had some sort of a connection.
+
+                    Not that Tessa didn’t like me or something. She still looked out for me. Repaired me when I got hurt. Protected me from her parents who were getting increasingly fed up with the number of drone parts laying around their house.
+
+                    N, though… Tessa bringing N home really did something to J. I don’t know why. She was just… different after that. Whereas I was shy and not very talkative, N was always excitable, happy, enthusiastic, and all these other things that Tessa couldn’t really ignore. She really liked him. Not in the same way she liked J, though. They had something else going on. But I don’t think J cared. She just saw N getting more attention than her and it freaked her out.
+
+                    And so the bullying began. I’d been there almost 6 months at that point, and it had taken less than one for J to establish this “let’s abuse N” idea. For a long time I didn’t know it was happening. It didn’t start around me, and since we all spent a lot of time around each other, N didn’t feel comfortable telling me about it when J was around. Eventually though, J stopped caring that I was there and started picking on him around me, too.
+
+                    She’d try to get me in on it, to join her in pointing out how pathetic and useless he was. Instead, I ignored her and watched, also kinda scared that she’d start doing it to me, too. Eventually though, I felt she took it too far. It was hard to be around and see him freaking out like that as J scalded him for being ‘too sensitive’. So, I told her to cut it out.
+
+                    <span name="J">“…What was that, V?”</span>
+                    <br>
+                    <span name="V">“I said cut it out. I’m tired of hearing you going at him like that. What’re you even trying to achieve, anyway?”</span> I objected.
+
+                    <span name="J">“That’s weird, I thought you didn’t care enough to stand up for this idiot,”</span> she retorted. <span name="J">“God, I can’t believe you’d even try. I don’t even think I’ve heard you say a sentence that long before.”</span>
+
+                    “I just don’t think Tessa would be happy that you’re picking on the new guy. Especially considering your… relations.”
+                    “You wouldn’t dare,” she glared, finally turning her attention to me. “And what the hell do you mean by ‘relations’, huh?”
+                    “Oh come on, it’s obvious. Her room is literally right next to ours, and the walls are thin. I’ve heard what you two get up to. She’d be really disappointed. You’ve seen how much she likes N.”
+                    “You’re a piece of shit, you know that?” J yelled, walking over to me confidently.
+                    I stood up to match her height, and she went to push me backward but I shoved her arm out of the way.
+                    “Don’t you fucking touch me,” she said, disgusted.
+                    “Well, don’t you touch him, either. Leave him alone, and I won’t say anything,” I offered, looking down at N, backed into a corner, hair messed up, screen chipped, exhausted, terrified. “You do anything to him again and the next time I see Tessa I tell her. OK?”
+                    “...Are you blackmailing me? Is that what you’re doing?” J asked, mockingly. “Seriously. I didn’t think you had it in you.” She turned back to N and scoffing. “Pathetic,” she whispered.
+                    “Heard that.”
+                    “Ugh. I didn’t say anything.”
+                    J walked closer to N again, though noticeably not as aggressive as before.
+                    “Fine. I’m so sorry, alright? Here, I’ll even help you up.” She extended an arm to him, which he only looked at, still scared. “Come on, I’m trying to be nice. Oh well. If you want to reject good help when you see it, so be it.”
+                    “You’re really close, J. I mean it.”
+                    “I didn’t do anything, OK? I wasn’t going to do anything. I’m done now, alright? Walking away.”
+                    J strutted out of the room with her usual attitude, not taking a second look at me or her brother before slamming the door behind her. I bet she’s going to Tessa to soothe her nerves.
+                    “Uh… thanks, V…?” N muttered. “I know we haven’t really… talked… or anything? But t-thanks. For that.” He looked at me as if he was some sick puppy who I’d just rescued.
+                    “Don’t mention it. Really. I think J would only get worse if Tessa knew,” I stated. “I just can’t stand seeing you get hurt anymore. Who does she think she is?”
+                    “Tessa’s favourite,” N said. “That’s what she tells me. She says it doesn’t make sense why someone as stupid and pathetic as me gets to be Tessa’s new favourite.”
+                    “She says that?”
+                    “Yeah. All the time. Not really when you’re around though. Just to me.” He slowly picked himself up off the ground, brushing his suit that didn’t really fit properly. He’d only just got it. Apparently Tessa’s parents had wanted a boy and had picked out this whole wardrobe for ‘him’ once he came of age. And they weren’t really the type to throw valuable things away. So now it belonged to N.
+                    I did really feel sorry for the guy. Sure, I’d barely been introduced to him, and he slept in Tessa’s room for now since she hadn’t set anything up in J and I’s room so I didn’t even see him at the end of the day, but he really did have something different to him. He’s positive about things. Even now, after being pushed around, name-called, and beaten down, he still had a little smile on his face, laughing at what he was saying. Optimistic, that’s the word. Or maybe just coping in his own way.
+                    “Do you think she’ll stop?”
+                    “…I don’t know. But if anything gets bad – like, really bad – you can tell me. And Tessa. Please tell someone. You’re not alone, OK?” I tried to comfort him. “And uh, I know I’m not exactly the most talkative or outgoing. But I’ll listen if you need anyone to talk to.”
+                    He smiled warmly again. I think he’s going to start crying. J might have been right about him being sensitive. I just don’t think that’s a bad thing.
+                    “Thanks, V. Really. T-that means a lot.”
+                    After that, I don’t think I saw J do anything to him for a good month. It was nice while it lasted, I suppose. Things were calmer. It gave N some time to settle in to things. God, his optimism was like a breath of fresh air. I wouldn’t say J was always negative, but she certainly wasn’t a joy to be around.
+                    For that time, it seemed things were alright. N even made J genuinely laugh and smile one time. I thought maybe it was over, that she’d done some reflection or something in her own time. Maybe she’d even talked to Tessa herself and opened up to her. It did seem like things changed a bit between them, at least.
+                    And then, in late July, there was a string of unbelievably stormy nights. I already didn’t like those. It was always frightening for us drones. Supposedly we were made waterproof for a certain amount of time, but the idea of a constant downpour was not pleasant. Not that we ever really went outside much anyway, and that was really only when it was sunny. Winter was time to stay inside, where it was warm.
+                    All of the signs were there, I really should have picked up on what J was trying to do, but again I really hoped things were alright by now. Besides, she never really came after me like she did with N. But, it still happened anyway.
+                    “V~”, she sung out, almost skipping towards me, “Tessa said her parents want you to go grab something from the gardening shed for them. They’re planning something, apparently.”
+                    “They just asked me to vacuum the library again a few minutes ago. I’m kinda busy,” I said, picking up some of the books N always forgot to pack away.
+                    “Well, when you’ve finished that, then. But it did sound urgent.”
+                    I sighed.
+                    “Fine, what did they want me to get?”
+                    “A few shovels, apparently. They’re getting some gardeners in and don’t want to pay extra for them bringing tools.”
+                    “That’s stupid,” I said.
+                    “Yeah, well, you know how cheap they can be. Even though they’ve got so much money to spare.”
+                    “I guess,” I said, finally having the books in the right order. “Just a couple shovels, then?”
+                    “Maybe some trowels, I don’t know. Just get a bunch of gardening things and put them at the front. The more, the better. That’s what they said to Tessa. I’m just relaying the orders,” she explained, innocently enough.
+                    “Right. You take over this, then, OK? They did want the library done, too.”
+                    “Sure, alright. Good luck out there, it’s still kinda wet from the other day. Take it easy.”
+                    “Yeah. Will do.”
+                    Take it easy. Yeah, right. She knew exactly what she was doing.
+                    It was pretty overcast outside. Grey sky but not raining. The wind was howling, though. The shed itself was a cheap thing made out of corrugated metal hidden in the very back corner of their enormous garden. It didn’t look like anyone had really been in there for a while. It was fairly overgrown on the outside, and on the inside all the tools were covered in mostly empty spiderwebs, though one or two still had an occupant. Not that it was any danger to me.
+                    In the shed, the wind sounded unbelievable, probably from the nearby tree whose branches bashed against the walls, rattling and resonating the entire structure. It took me maybe 10 minutes to carry the various gardening tools from the shed to the front garden. It didn’t really look like there was anywhere that needed gardening, really, but I didn’t think that strange. Maybe they were going to change the whole thing. It’s none of my business.
+                    I was carrying the last load of tools to the front yard when I felt the first few raindrops. One or two aren’t too big of a deal, drones were designed with a bit of rain in mind. My job was done, anyway.
+                    The front doors being locked wasn’t all that surprising. The door through the laundry being locked was maybe just a coincidence. But I got outside through the main entertaining area, and that being locked was strange. I couldn’t have done it. Tessa’s folks never gave us drones the keys.
+                    That’s… this is fine. There’s other doors.
+                    The rain is pouring down now. I’m starting to get cold. It’s getting late, too. My mind starts thinking about what would happen if nobody finds me out here, left out in the rain to rust forever.
+                    I… I can’t let myself dwell on that. I try wipe the drops from my glasses with my sleeve, but it only leaves a smudge and now I can’t see any better than if I wasn’t wearing them at all.
+                    The other side of the house is Tessa’s parents’ room. They’d know I was out here. They’d hate seeing me, and would especially hate me banging on their window, but they’d at least tell Tessa.
+                    I walk past one of the living rooms, the most used one. The lights are off. It’s not even 6:00. Nobody’s in there.
+                    I keep going to Tessa’s parents’ bedroom. Yet again, the lights are off, and after turning my lights on to the brightest setting, I can tell the room’s empty of people, too.
+                    I keep my lights on. It’s dark, now. My shoes, not made for the weather, are muddy and moist, and my clothes are soaked. I hate the sound it all makes.
+                    My last chance is a door in the front room with a balcony that overlooks the land to the right of the mansion. The ground doesn’t meet it, but the paving around the house does.
+                    Walking under the safety of the roof, I meet the door with relief.
+                    And it doesn’t open either.
+                    This… can’t be happening. This can’t be happening…!
+                    I knock on the door. Maybe someone’s in there. I knock harder. I’m banging on the door as loud as I can.
+                    “Help!” I cry, “Can anyone hear me? Let me in!”
+                    There’s a bright flash and the loudest thunderclap I’ve ever heard.
+                    “I… I’ll die! Please, let me in!”
+                    I turn around with my back to the door.
+                    The sky is black, the rain is pelting ever harder, and I’m no longer safe under this tiny bit of roof.
+                    I need shelter. All I can think of is that shed where the tools were. That’s solid. I can just… wait out the storm under there. I can just wait until they come looking for me. They’ll find me.
+                    But it’s a terrifying, miserable run back to it. I slip and tear the edge of my dress on the concrete floor, tripping over it. Dragging it through the squelchy, muddy ground, I reach the safety of the shed, slamming the door behind me. I fumble with the bolt, and eventually the door is locked. The whole structure shakes from the wind, like it’s about to fall over, but stays standing.
+                    I can’t wear these dripping clothes anymore. I have to take them off, or the water will seep into my body and I’ll short circuit.
+                    It’s freezing cold without them on.
+                    The wind is picking up. It’s rattling the shed, and the trees around it. Thunder sounds so dark and horrible from in here. I curl myself into a ball, turn my lights off, and cover my ears.
+                    They’ll… come looking for me. They have to. They have to. They’ll know something’s wrong. They’ll know I’m missing.
+                    Thunder.
+                    They’ll come find me they’ll come find me they’ll come find me they’ll come find me -
+                    The thought of “what would happen if they didn’t” refuses to leave my mind. I keep repeating to myself that I’ll be saved, that I just have to outlast the storm, but I can’t hear myself think. I can only feel, and I feel unsafe, vulnerable, and like I’m about to die.
+                    The wind is worsening. Something slams onto the roof of the shed with a horrible and deafeningly loud bang. I scream in panic and overwhelm.
+                    They’ll come find me. They’ll come find me. They’ll come find me. They’ll come find me.
+                    I repeat the phrase for what feels both like minutes and hours. I hear nothing from outside except the storm. No panicked voices, nobody yelling out for me, nothing. Eventually, I think it starts hailing too, and the noise feels like it’s going to tear me apart.
+                    I can’t stay here I have to get inside I have to get inside I have to get inside -
+                    In my desperation and panic, I throw open the shed door and sprint towards the house. I guard my screen and core from the hail, and slip in the mud on the way. I crawl to the door on my knees, and grab the handle, expecting it by some miracle to be open despite the empty rooms and darkness, and it doesn’t budge.
+                    I’m weak. I bang on the glass windows, and eventually I just try screaming. Nothing helps.
+                    I really am going to die out here. Nobody’s coming to find me. The only thing I can do is protect my core from the water and hope a short circuit doesn’t fry all of my internals instantly.
+                    “Tessa… please…” I beg to nobody. “I know I mean nothing to you, but… I’m dying…”
+                    Nothing makes sense anymore. I think I’ve taken some damage from all the water.
+                    I lay sideways on the wet concrete, back to the door. I’m curled into a ball again. I have to protect my core.
+                    I have to… protect…
+                    I’m dying. I’m going to die. This is it.
+                    My vision is failing. There’s nothing I can do. Something inside me is surely broken and damaged beyond repair.
+                    N isn’t going to manage without me. If I die and he’s left alone with J… he’ll…
 
                 </details>
             </div>
